deploy-app-to-eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
      - name: tetris-container
        image: 977098994448.dkr.ecr.eu-west-2.amazonaws.com/eks-tetras-project:latest
        ports:
        - containerPort: 80
